[gd_scene load_steps=8 format=3 uid="uid://dq2rphc7us1i2"]

[ext_resource type="Texture2D" uid="uid://cinp4kgbh1bcm" path="res://title_scene_sprite/封面總圖.png" id="1_7rkrl"]
[ext_resource type="Script" uid="uid://dw4waeogn554p" path="res://title_scene_v_2.gd" id="1_lk334"]
[ext_resource type="Texture2D" uid="uid://dlpfiv8wa6d6k" path="res://title_scene_sprite/pulse shape 2.png" id="2_m5d6f"]
[ext_resource type="Texture2D" uid="uid://bykdsnkfmprtg" path="res://title_scene_sprite/exit game 1.png" id="2_wq64j"]
[ext_resource type="Texture2D" uid="uid://dsqr1qlkqye3m" path="res://title_scene_sprite/settings 1.png" id="4_lk334"]
[ext_resource type="Texture2D" uid="uid://bnn2ciiknfkox" path="res://title_scene_sprite/start game 1.png" id="5_sc0vs"]
[ext_resource type="Texture2D" uid="uid://djtubuafbuhif" path="res://icon.svg" id="7_sc0vs"]

[node name="title_scene_v2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_lk334")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(960, 540)
texture = ExtResource("1_7rkrl")

[node name="title_bar" type="Sprite2D" parent="."]
position = Vector2(734, 482)
texture = ExtResource("2_m5d6f")

[node name="Exit_button" type="Area2D" parent="."]
position = Vector2(226, 63)
scale = Vector2(0.165, 0.165)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Exit_button"]
polygon = PackedVector2Array(6393.939, 1799.9998, 8812.12, 1799.9998, 8690.908, 2369.6968, 5733.333, 2369.6968)

[node name="Sprite2D" type="Sprite2D" parent="Exit_button"]
position = Vector2(7274.9995, 2095)
texture = ExtResource("2_wq64j")

[node name="Settings_button" type="Area2D" parent="."]
position = Vector2(1320, 543.99994)
scale = Vector2(0.279, 0.279)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Settings_button"]
polygon = PackedVector2Array(-602.1509, -258.0642, 1197.1323, -258.0642, 1086.0215, 247.31201, -1200.717, 250.89624)

[node name="Sprite2D" type="Sprite2D" parent="Settings_button"]
texture = ExtResource("4_lk334")

[node name="Start_button" type="Area2D" parent="."]
position = Vector2(1103, 800.00006)
scale = Vector2(0.338, 0.338)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Start_button"]
polygon = PackedVector2Array(-434.91113, -467.4558, 1514.793, -467.4558, 1316.5679, 449.70386, -1505.9171, 458.5796)

[node name="Sprite2D" type="Sprite2D" parent="Start_button"]
texture = ExtResource("5_sc0vs")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
position = Vector2(330, 424)
texture = ExtResource("7_sc0vs")
